@@ -1,5 +1,14 @@
+2003-03-30  Alif Wahid	<awah005@users.sourceforge.net>
+
+	Added example program. Another straight conversion from
+	C to Python based on Naofumi's program in C.
+
+	* examples/pixmap-mixed.py: Tests the mixing of GDK and
+	OpenGL calls using a GdkPixmap.
+
+
 2003-03-22  Alif Wahid	<awah005@users.sourceforge.net>
-	
+
 	Added some basic instruction for building using
 	python and distutil on Win32 platforms. See the
 	WIN32_BUILD file.
